<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>eJagruti</groupId>
	<artifactId>CucumberFramework</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>3.14.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.5</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-jvm</artifactId>
			<version>1.2.5</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>1.2.5</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-core</artifactId>
			<version>1.2.5</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-html</artifactId>
			<version>0.2.3</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-jvm-deps</artifactId>
			<version>1.0.5</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>gherkin</artifactId>
			<version>2.12.2</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-picocontainer</artifactId>
			<version>1.2.5</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>net.masterthought</groupId>
			<artifactId>cucumber-reporting</artifactId>
			<version>3.5.1</version>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>1.2.5</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-testng</artifactId>
			<version>1.2.5</version>
			<scope>compile</scope>
			<exclusions>
				<exclusion>
					<groupId>junit</groupId>
					<artifactId>junit</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.github.mkolisnyk</groupId>
			<artifactId>cucumber-runner</artifactId>
			<version>1.3.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.github.temyers/cucumber-jvm-parallel-plugin -->
<dependency>
    <groupId>com.github.temyers</groupId>
    <artifactId>cucumber-jvm-parallel-plugin</artifactId>
    <version>1.2.1</version>
</dependency>
<dependency>
    <groupId>com.google.guava</groupId>
    <artifactId>guava</artifactId>
    <version>26.0-jre</version>
</dependency>
	</dependencies>
	<build>
		<plugins>
<!-- 		      <plugin>
            <groupId>com.github.temyers</groupId>
            <artifactId>cucumber-jvm-parallel-plugin</artifactId>
            <version>5.0.0</version>
            <executions>
                <execution>
                    <id>generateRunners</id>
                    <phase>generate-test-sources</phase>
                    <goals>
                        <goal>generateRunners</goal>
                    </goals>
                    <configuration>
                        <glue>
                            <package>src/test/java</package>
                        </glue>
                        <featuresDirectory>src/test/resources/Features</featuresDirectory>
                        <cucumberOutputDir>target/cucumber-parallel</cucumberOutputDir>
						<format>json,html</format>
                    </configuration>
                </execution>
            </executions>
        </plugin> -->
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.1</version>
            <configuration>
                <source>1.8</source>
                <target>1.8</target>
            </configuration>
        </plugin>
        <plugin>
<!-- Fork vs Parallel
Forking creates separate JVM process which is more thread safe as it isolates resources.
Still, in some cases, this can cause troubles to the machine running the tests as it requires
more resources. Surefire supports another type of parallelism where tests are run in one JVM
process but different threads. More details are available at Fork Options and Parallel Test 
Execution page.
In order to use many threads instead of many JVMs then use <threadCount>10</threadCount> 
<parallel>classes</parallel> instead of <forkCount>10</forkCount> <reuseForks>true</reuseForks>.
Very important is if you use parallel you MUST change <cucumberOutputDir>target/cucumber-parallel</cucumberOutputDir>
 to <cucumberOutputDir>target</cucumberOutputDir>. 
 This a must because all Cucumber threads try to create cucumber-parallel directory and since 
 Cucumber is not thread safe most of them fail. -->
    <groupId>com.github.temyers</groupId>
    <artifactId>cucumber-jvm-parallel-plugin</artifactId>
    <version>5.0.0</version>
    <executions>
        <execution>
            <id>generateRunners</id>
            <phase>validate</phase>
            <goals>
                <goal>generateRunners</goal>
            </goals>
            <configuration>
                <glue>
                <package>stepDefinition</package>
          		</glue>
          		<outputDirectory>target/generate-source</outputDirectory>
          		<!-- <outputDirectory>src/test/java/runners</outputDirectory> -->
          		<featuresDirectory>src/test/resources/Features/</featuresDirectory><!--Cucumber feature file location-->
                <cucumberOutputDir>target/cucumber-parallel</cucumberOutputDir><!--Cucumber default reporting path-->
					<plugins>
    				<plugin>
       				 <!--The available options are junit, testng, html, pretty, json, usage and rerun -->
        				<name>json</name>
        				<extension>json</extension>
       				 <!--Optional output directory. Overrides cucumberOutputDirectory. Usefull when different plugins create files with the same extension-->
        				<outputDirectory>${project.build.directory}/cucumber-parallel/json/</outputDirectory>
    				</plugin>
					</plugins>
				<strict>true</strict>
				<monochrome>true</monochrome>
				<tags>
               <tag>@Regression,@SmokeTest</tag>
                </tags>
                 <useTestNG>false</useTestNG>
                <!-- The naming scheme to use for the generated test classes.  One of ['simple', 'feature-title', 'pattern'] -->
        		<namingScheme>simple</namingScheme>
        		<!-- The class naming pattern to use.  Only required/used if naming scheme is 'pattern'.-->
        		<namingPattern>Parallel{c}IT</namingPattern>
        		<!-- One of [SCENARIO, FEATURE]. SCENARIO generates one runner per scenario.  FEATURE generates a runner per feature. -->
                <parallelScheme>FEATURE</parallelScheme>
            </configuration>
        </execution>
    </executions>
  </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19.1</version>
				<configuration>
				    <forkMode>perthread</forkMode>
        			<threadCount>2</threadCount>
        			<argLine>-Xmx1024m -XX:MaxPermSize-256m</argLine>
<!-- 				 	<testFailureIgnore>true</testFailureIgnore>
        			<forkCount>4</forkCount>
        			<reuseForks>true</reuseForks>
        			<include>target/generate-source/Parallel*IT.java</include>	   --> 	
					<includes>**/Parallel*.java
					</includes>
				</configuration>
				</plugin>
				  <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-report-plugin</artifactId>
        <version>2.20</version>
  </plugin>
  <plugin>
	<groupId>net.masterthought</groupId>
    <artifactId>maven-cucumber-reporting</artifactId>
    <version>2.8.0</version>
        <executions>
          <execution>
            <id>execution</id>
            <phase>verify</phase>
            <goals>
              <goal>generate</goal>
            </goals>
            <configuration>
              <projectName>Parall_surefire_and_cucum_plugins</projectName>
              <outputDirectory>${project.build.directory}/reports/cucumber-reports</outputDirectory>
              <cucumberOutput>target/cucumber-parallel/json</cucumberOutput>
              <skippedFails>true</skippedFails>
              <enableFlashCharts>false</enableFlashCharts>
              <buildNumber>42</buildNumber>
            </configuration>
          </execution>
        </executions>
      </plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											com.github.temyers
										</groupId>
										<artifactId>
											cucumber-jvm-parallel-plugin
										</artifactId>
										<versionRange>
											[5.0.0,)
										</versionRange>
										<goals>
											<goal>generateRunners</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

</project>
